--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "homepage": "https://spyrosgg.github.io/tagging-app/",
   "private": true,
   "dependencies": {
+    "@fireworks-js/react": "^2.10.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "fireworks-js": "^2.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
